language/move-lang/tests/move_check/parser/struct_type_resource.move
module M {
    // Check misspelling of "resource" constraint.
    struct S<T: res> { }
}
